filebeat/docs/inputs/input-container.asciidoc Fix markdown error

--- a/filebeat/docs/inputs/input-container.asciidoc
+++ b/filebeat/docs/inputs/input-container.asciidoc
@@ -27,7 +27,7 @@ Example configuration:
 <1> `paths` is required. All other settings are optional.
 
 
-NOTE: '/var/log/containers/*.log' is normally a symlink to '/var/log/pods/*/*/.log', 
+NOTE: '/var/log/containers/\*.log' is normally a symlink to '/var/log/pods/*/*/.log', 
 so above path can be edited accordingly
 
 
